--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,7 @@
 }
 
 .App-logo {
-  /* /* animation: App-logo-spin infinite 20s linear; */
   height: 40vmin;
-  /* pointer-events: none; */
 }
 
 .App-header {
@@ -19,8 +17,16 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+.item{
+  flex:1;
+}
+img{
+  width: 90%;
 }
 
 
