--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 75vmin;
 }
 
 .App-header {
@@ -19,14 +19,18 @@
 
 .container{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
+  justify-content: center;
   padding: 10px;
 }
 .item{
   flex:1;
+  padding: 5px;
 }
 .item img{
-  width: 90%;
+  width: 100%;
+  height: auto;
 }
 
 
