--- a/src/App.css
+++ b/src/App.css
@@ -37,5 +37,29 @@
   font-size: 16px;
   color: darkslategrey;
 }
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
+.topnav a.active {
+  background-color: rgb(64, 125, 167);
+  color: white;
+}
+
+.topnav-right {
+  float: right;
+}
 
