--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,10 @@
+
 .App {
   text-align: center;
   margin: 0;
 }
 
-/* Navigation Css */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: rgb(64, 125, 167);
-  color: white;
-}
-
-.topnav-right {
-  float: right;
-}
-
+/* set up the front page */
 @import url("https://fonts.googleapis.com/css?family=Dosis:400,700");
 
 :root {
@@ -120,10 +95,11 @@ body {
   flex-grow: 1;
   min-height: 350px;
   background: var(--main-purple-color)
-    url("./buket_deer01.jpg") no-repeat
+    url("./img/buket_deer01.jpg") no-repeat
     center / cover;
   background-blend-mode: luminosity;
-  color: var(--main-white-color);
+  background-blend-mode: darken;
+  color: black;
 }
 
 .page-main div {
@@ -132,10 +108,13 @@ body {
 
 .page-main h1 {
   margin-bottom: 20px;
+  font-size: 40px;
+  text-shadow: 2px 2px #f2f2f2;
 }
 
-.page-main p + p {
+.page-main p{
   margin-top: 10px;
+  text-shadow: 2px 2px #f2f2f2;
 }
 
 
