--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -1,4 +1,4 @@
-/* stuff about Projects */
+/* stuff about Projects
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
@@ -15,6 +15,7 @@ h1 {
     justify-content: center;
     padding: 10px;
   }
+
   .item{
     flex:1;
     padding: 5px;
@@ -27,4 +28,29 @@ h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
     color: darkslategrey;
-  }
+  } */
+
+/* END OF PROJECT RELATED CSS */
+.img {
+  width: 100%;
+}
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  width: 100%;
+  padding: 1px;
+}
+
+.projectBox {
+  padding: 5px;
+}
+.projHeading {
+  font-size: 90%
+}
+.itemImage {
+  border: 1px solid black;
+}
+.itemImage img {
+  width:100%;
+  height:100%;
+}
